--- a/client/Coin-Crafter/src/index.css
+++ b/client/Coin-Crafter/src/index.css
@@ -3,41 +3,39 @@
 
 
 @theme {
-    --font-display: "Poppins", sans-serif;
-    --breakpoint-3xl: 1920px;
-    --color-primary: #875cf5;
+ --font-display: "Poppins", sans-serif;
+ --breakpoint-3xl: 1920px;
+ --color-primary: #875cf5;
 }
 @layer base {
-  
+ 
 
-  html {
-    font-family: var(--font-display);
-  }
+ html {
+ font-family: var(--font-display);
+ }
 
-  body {
-    background-color: #fcfbfc;
-    overflow-x: hidden;
-  }
+body {
+ background-color: #fcfbfc;
+ overflow-x: hidden;
+ }
 
-  .input-box{
-    @apply w-full flex justify-between gap-3 text-sm  text-black bg-slate-100 rounded px-4 py-3 mb-4 mt-3 border border-slate-200 outline-none;
-  }
+ .input-box{
+ @apply w-full flex justify-between gap-3 text-sm  text-black bg-slate-100 rounded px-4 py-3 mb-4 mt-3 border border-slate-200 outline-none;
+ }
 }
 
-  .card{
-    @apply bg-white p-6 rounded-2xl shadow-gray-100 border border-gray-200/50;
-  }
+.card{
+ @apply bg-white p-6 rounded-2xl shadow-gray-100 border border-gray-200/50;
+ }
 
-  .card-btn{
-    @apply flex items-center gap-3 text-[12px] font-medium text-gray-700 hover:text-purple-500 bg-gray-50 hover:bg-purple-50 px-4 py-1.5 rounded-lg border border-gray-200/50 cursor-pointer;
-  }
+ .card-btn{
+ @apply flex items-center gap-3 text-[12px] font-medium text-gray-700 hover:text-purple-500 bg-gray-50 hover:bg-purple-50 px-4 py-1.5 rounded-lg border border-gray-200/50 cursor-pointer;
+ }
 
-  .add-btn{
-    @apply flex item-center gap-1.5 text-xs md:test-5m font-medium text-purple-600 whitespace-nowrap bg-purple-50 border border-purple-100 rounded-lg px-4 py-2 cursor-pointer;
-  }
+.add-btn{
+ @apply flex items-center gap-1.5 text-xs md:text-sm font-medium text-purple-600 whitespace-nowrap bg-purple-50 border border-purple-100 rounded-lg px-4 py-2 cursor-pointer;
+ }
 
-  .add-btn-fill{
-    @apply text-white bg-primary
-  }
-
-  
+.add-btn-fill{
+ @apply text-white bg-primary;
+ }
